# FastAPI_Gecko

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  note.md  pyproject.toml  readME.md  requirements.txt
app/: crud.py  main.py
app/databases/: db.py
app/models/: model.py
app/schemas/: schemas.py
migrations/: env.py
migrations/versions/: 0082cd429187_update_models.py  42e3626ed705_update_models.py  7913160684ec_update_models.py  a6f862da2984_update_models.py  cec387bb5d11_update_models.py
tests/: test_db.py  test_main.py
