[tool.poetry]
name = "gecko-apikey-receiver"
version = "0.1.0"
description = ""
authors = ["Ansor T. <ansor.tagaev101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
python-dotenv = "^1.0.1"
uvicorn = "^0.32.1"
pydantic = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
