[tool.poetry]
name = "geckopackage"
version = "0.1.0"
description = "Gecko dependencies"
authors = ["Ansor T. <ansor.tagaev101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
